--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -3,7 +3,7 @@
 <head>
   <title>WebTorrent Sidebar</title>
   <link rel="stylesheet" href="../assets/video-js.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="sidebar.css">
 </head>
 <body>
   <h2>Stream & Seed Torrents</h2>
