--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,7 +8,7 @@
   </style>
 </head>
 <body>
-  <h2>WebTorrent Sidebar</h2>
+  <h2>Torrent Theatre</h2>
   <button id="openSidebar">Open Sidebar</button>
 </body>
 <script src="popup.js"></script>
