--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>WebTorrent Sidebar</title>
+  <title>Torrent Theatre</title>
   <link rel="stylesheet" href="../assets/video-js.css">
   <link rel="stylesheet" href="sidebar.css">
 </head>
